sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:10: error: reassignment to val
    if (i=1) {j=ecart}
         ^