sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  val taille=getNombreValeurs()
  var temp=0
  var j=0
  var ecart=taille/2
  for (i<-1 to taille-1){
    temp=getValeur(i)
    j=i
    if (i=1) {j=ecart}
    while ((j>0)&&(getValeur(j/2)>temp)){
      setValeur(j,getValeur(j/2))
      j=j/2
      }
     	setValeur(j,temp) }
}

def insertionSort() {
  val taille=getNombreValeurs()
  var temp=0
  var j=0
  for (i<-1 to taille-1){
    temp=getValeur(i)
    j=i
    while ((j>0)&&(getValeur(j-1)>temp)){
      setValeur(j,getValeur(j-1))
      j=j-1
      }
     	setValeur(j,temp) }}